# jikan-rs

./: Cargo.toml  README.md
src/: lib.rs  models.rs  query_builder.rs
src/anime/: characters.rs  episodes.rs  external.rs  forum.rs  mod.rs  moreinfo.rs  news.rs  pictures.rs  recommendations.rs  relations.rs  reviews.rs  staff.rs  statistics.rs  themes.rs  userupdates.rs  videos.rs
src/characters/: anime.rs  manga.rs  mod.rs  pictures.rs  voice_actors.rs
